--- a/resumewebsite/index.html
+++ b/resumewebsite/index.html
@@ -140,7 +140,7 @@
       <li>Exploring the intersection of art, neuroscience, and AI</li>
       <li>Gaming industry trends and innovations in VR/AR</li>
     </ul>
-    <a class="button" href="https://clg4598.github.io/resume-website/" download="Chadwick_Grimes_Resume_Corrected_Final.pdf">
+    <a class="button" href=Chadwick_Grimes_Resume_Corrected_Final.pdf download=
       Download Resume
     </a>
   </div>
